--- a/sections.scss
+++ b/sections.scss
@@ -86,3 +86,9 @@
     margin-top: 100px;
     margin-bottom: 100px;
 }
+
+.register-property-form-container {
+    padding: 20px;
+    background-color: rgb(127, 127, 127);
+    border-radius: 10px;
+}
