--- a/css/sub_sections.css
+++ b/css/sub_sections.css
@@ -70,4 +70,9 @@ li a:hover {
 .janaki-book-button:hover {
   background-color: rgb(127, 127, 127);
   transition: all 0.3s ease-out;
+}
+
+.hidden-section {
+  height: 5000px;
+  display: none;
 }/*# sourceMappingURL=sub_sections.css.map */
